Added svg image for marking as blank. Removed debugging hint on squares, game is now in playable state

--- a/src/Game.css
+++ b/src/Game.css
@@ -15,6 +15,7 @@
 }
 .markFalse{
     background-color:lightcoral;
+    background-image: url("./markBlank.svg");
 }
 .unselected{
     background-color:white;
